# chromatoPy_App

./: .gitignore  README.md  build_app.py  build_dmg.sh  pyproject.toml  update_version_number.txt
.github/workflows/: build-ap.yml  build-app.yml
src/chromatopy/: chromatoPy_base.py  hplc_integration.py
src/chromatopy/FID/: FID_Integration_functions.py  FID_integration.py  import_data.py  manual_peak_integration.py
src/chromatopy/gui/: app.py  logic.py  settings_memory.py  themes.py  views.py
