[tool.poetry]
name = "chromatopy"
version = "0.1.16a"
description = "Peak integration software."
authors = ["Dr. Gerard Otiniano <gerardotiniano@gmail.com>", "Dr. Elizabeth Thomas"]
readme = "README.md"
packages = [{include = "chromatopy", from = "src"}]
include = [
    "src/chromatopy/FID/peak_labels.json",
    "src/chromatopy/utils/gdgt_meta.json",
    "src/chromatopy/utils/gdgt_meta_default.json",
    "src/chromatopy/nice.wav",
    "src/chromatopy/oof.wav",
    "Data Input Templates/*",
]

[tool.poetry.dependencies]
python = "^3.11"
hdbscan = "0.8.40"
ImageHash = "4.3.2"
matplotlib = "3.10.5"
numpy = "2.3.2"
pandas = "2.3.1"
Pillow = "11.3.0"
pybaselines = "1.1.0"
PySide6 = ">=6.7,<7.0"
rainbow_api = "1.0.9"
scikit_learn = "1.7.1"
scipy = "1.16.1"
tqdm = "4.67.1"
simpleaudio = "*"

[tool.poetry.scripts]
chromatopy-desktop = "chromatopy.gui.app:main"

[tool.poetry.group.build.dependencies]
pyinstaller = ">=6.10,<7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
